--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,17 @@ dependencies:
   path_provider: ^2.1.5
   ffmpeg_kit_flutter_new: ^1.6.1 
   video_player: ^2.9.1
+  flutter_launcher_icons: "^0.13.1" # 이 줄이 꼭 있어야 합니다!
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+flutter_launcher_icons:
+  android: "ic_launcher"
+  ios: true
+  image_path: "assets/icon/icon.png" # 아까 넣은 이미지 경로
+  min_sdk_android: 21 # 안드로이드 설정
 
 dev_dependencies:
   flutter_test:
@@ -71,7 +78,6 @@ flutter:
   uses-material-design: true
   assets:
     - .env
-    - .env.example
     - assets/watermark/free_ai_creation.png
 
   # To add assets to your application, add an assets section, like this:
